SVG now is under the canvas.
It still needsa little adjusment on it

--- a/Popcorn/styles/index.css
+++ b/Popcorn/styles/index.css
@@ -1,13 +1,18 @@
-#container {
-    border: 1px solid black;
+#game-container{
     width: 500px;
     margin: 20px auto;
 }
 
+#container {
+    border: 1px solid black;
+    margin: auto;
+}
+
 #svg-container {
     border: 1px solid black;
-    width: 500px;
-    margin: 20px auto;
+    position: absolute;
+    margin: auto;
+    top: 20px;
 }
 /*.kineticjs-content {*/
     /*display: none !important;*/
