Added High Score
Added high score div to appear under the game screen. After the game
ends you are prompted to enter your name and highs score appears. Random
points (250 - 750) for each brick.

--- a/Popcorn/styles/index.css
+++ b/Popcorn/styles/index.css
@@ -23,6 +23,11 @@
 #wrapper button{
     margin: 30px 10px 0 10px;
 }
+
+#score {
+    margin-top:50px;
+	width: 196px;
+}
 /*.kineticjs-content {*/
     /*display: none !important;*/
 /*}*/
