--- a/Popcorn/styles/index.css
+++ b/Popcorn/styles/index.css
@@ -1,11 +1,24 @@
+body{
+    font-family: 'Comic Sans MS';
+    background-color: #AAAAAA;
+    background-image:url('../images/notebook.png');
+}
+
+h1{
+    width: 300px;
+    margin: auto;
+}
+
 #game-container{
     width: 500px;
     margin: 20px auto;
+    position: relative;
+
 }
 
 #container {
-
     margin: auto;
+
 }
 
 #container canvas{
@@ -13,19 +26,29 @@
 }
 
 #svg-container {
-    border: 1px solid black;
+    border: 3px solid black;
     position: absolute;
     margin: auto;
-    top: 20px;
+    top: -2px;
+    left: -2px;
     z-index: 2;
+    background-color: #9A999E;
+    background-image:url('../images/green_gobbler.png');
 }
 
 #wrapper button{
     margin: 30px 10px 0 10px;
+    padding: 10px 20px;
+    background: transparent;
+    border: none;
+}
+
+#wrapper button:hover{
+    background-color: #53BF6B;
 }
 
 #score {
-    margin-top:50px;
+    margin:40px auto;
 	width: 196px;
 }
 /*.kineticjs-content {*/
