--- a/Javascript/23-AMD-RequireJS/styles/style.css
+++ b/Javascript/23-AMD-RequireJS/styles/style.css
@@ -1,28 +1,37 @@
         body {
             background: #000;
+            font: 14px Tahoma;
         }
         .character-box, button {
             color: #b39e79;
             width: 400px;
-            border: 1px solid #b39e79;
+            border: 1px solid #46311b;
             cursor: pointer;
             margin: 0 0 10px 0px;
             background: #17100d;
         }
-        .character-box:hover {
-            border: 1px solid #e6d0a9;
+        button {
+            height: 50px;
+        }
+        .character-box:hover, button:hover {
+            background: #31221b;
+            color: #d5bd93;
+            border: 1px solid #836e53;
         }
         .character-box img {
-            width: 400px;
-            border-top: 1px solid #b39e79;
-            margin: 0 0 -5px 0px;
+            width: 380px;
+            border: 1px solid #46311b;
+            margin: 5px 0 8px 8px;
         }
-        .character-box .character-name {
+        .character-box .characterName {
             font: 26px Georgia;
             margin: 10px 0 0px 5px;
             font-weight: bold;
             color: #b26400;
+            position: relative;
+            top: 5px;
+            left: 5px;
         }
-        .character-box .character-description {
-            margin: 5px 5px 5px 5px;
+        .character-box .characterDescription {
+            margin: 5px 10px 5px 10px;
         }
