--- a/Javascript/GAMES/AngryOrcs/style/main.css
+++ b/Javascript/GAMES/AngryOrcs/style/main.css
@@ -3,19 +3,23 @@
     width: 640px;
     height: 480px;
     display: none;
+    border: 1px solid #000;
 }
 #root {
 
 }
 
 #mainMenu {
-    background: rgba(222,222,222,.9);
+    background: #fff url(../img/spashscreen.jpg) 0 0 no-repeat;
     color: black;
 }
 #mainMenu h3 {
     float: left;
+    color: #ffffff;
+    font-size: 25px;
 }
 #mainMenu #main-menu-navigation {
+    background: rgba(255,222,55,.7);
     float: right;
     border: 1px solid #000;
     width: 40%;
@@ -26,4 +30,16 @@
 }
 #mainMenu #main-menu-navigation li {
     margin: 20px 0 0 -15px;
+}
+
+
+#levelSelectScreen button {
+    width: 50px;
+    height: 50px;
+    margin: 10px 10px 0 10px;
+    cursor: pointer;
+}
+
+#loadingScreen {
+    background: rgba(100,100,100, .3);
 }
