--- a/Javascript/30-JS-APPS-Consuming-Remote-Data/style/main.css
+++ b/Javascript/30-JS-APPS-Consuming-Remote-Data/style/main.css
@@ -2,6 +2,16 @@
 #wrapper {
     margin: 0 auto;
     width: 500px;
-    height: 500px;
+    min-height: 200px;
     border: 1px solid #000;
+}
+#infoBox {
+    font-size: 12px;
+    color: gray;
+}
+#studentsList li img {
+    position: relative;
+    top: 3px;
+    left: 3px;
+    cursor: pointer;
 }
