--- a/DataBases/13-MongoDB-and-MongoDB-with-NET/MongoChat/MainWindow.xaml
+++ b/DataBases/13-MongoDB-and-MongoDB-with-NET/MongoChat/MainWindow.xaml
@@ -3,6 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Button Content="Button" HorizontalAlignment="Left" Margin="231,274,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,274,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="20" Width="191"/>
+
     </Grid>
 </Window>
