--- a/DataBases/13-MongoDB-and-MongoDB-with-NET/MongoChat.Client.Wpf/App.xaml
+++ b/DataBases/13-MongoDB-and-MongoDB-with-NET/MongoChat.Client.Wpf/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="MongoChat.App"
+﻿<Application x:Class="MongoChat.Client.Wpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
