--- a/DataBases/13-MongoDB-and-MongoDB-with-NET/MongoChat.Client.Wpf/MainWindow.xaml
+++ b/DataBases/13-MongoDB-and-MongoDB-with-NET/MongoChat.Client.Wpf/MainWindow.xaml
@@ -1,22 +1,23 @@
 ﻿<Window x:Class="MongoChat.Client.Wpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="507.899">
+        Title="MainWindow" Height="350" Width="510" ResizeMode="NoResize">
         <StackPanel Grid.Row="2" Margin="0, 0, 0, 0">
             <Border Grid.ColumnSpan="2" Background="#878787" Height="40" >
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Foreground="#fff" FontSize="16" Margin="10, 0, 0, 0" VerticalAlignment="Center">Mongo Chat</TextBlock>
                 </StackPanel>
             </Border>
-            <ListView Name="lvStudents">
+            <ListView Name="lvMessages">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="User" Width="80" DisplayMemberBinding="{Binding UserName}" />
-                        <GridViewColumn Header="Message" Width="350" DisplayMemberBinding="{Binding Message}" />
-                        <GridViewColumn Header="Date" Width="60" DisplayMemberBinding="{Binding Date}" />
+                        <GridViewColumn Header="User" Width="80" DisplayMemberBinding="{Binding Author}" />
+                        <GridViewColumn Header="Message" Width="340" DisplayMemberBinding="{Binding Text}" />
+                        <GridViewColumn Header="Date" Width="60" DisplayMemberBinding="{Binding DateAdded}" />
                     </GridView>
                 </ListView.View>
             </ListView>
-        <TextBox Name="userInput" KeyDown="userInput_KeyDown_1"></TextBox>
-        </StackPanel>
+        <TextBox Name="userInput" Height="40" Margin="20 20 20 20" KeyDown="userInput_KeyDown_1" FocusManager.FocusedElement="{Binding RelativeSource={RelativeSource Self}}"></TextBox>
+        <Button Margin="20 0 20 0" Height="40">Submit Message</Button>
+    </StackPanel>
 </Window>
