--- a/DataBases/13-MongoDB-and-MongoDB-with-NET/MongoChat.Client.Wpf/MainWindow.xaml
+++ b/DataBases/13-MongoDB-and-MongoDB-with-NET/MongoChat.Client.Wpf/MainWindow.xaml
@@ -1,23 +1,35 @@
 ﻿<Window x:Class="MongoChat.Client.Wpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="510" ResizeMode="NoResize">
+        Title="MainWindow" Height="auto" Width="510" ResizeMode="NoResize">
         <StackPanel Grid.Row="2" Margin="0, 0, 0, 0">
             <Border Grid.ColumnSpan="2" Background="#878787" Height="40" >
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Foreground="#fff" FontSize="16" Margin="10, 0, 0, 0" VerticalAlignment="Center">Mongo Chat</TextBlock>
                 </StackPanel>
             </Border>
-            <ListView Name="lvMessages">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="User" Width="80" DisplayMemberBinding="{Binding Author}" />
-                        <GridViewColumn Header="Message" Width="340" DisplayMemberBinding="{Binding Text}" />
-                        <GridViewColumn Header="Date" Width="60" DisplayMemberBinding="{Binding DateAdded}" />
-                    </GridView>
-                </ListView.View>
-            </ListView>
-        <TextBox Name="userInput" Height="40" Margin="20 20 20 20" KeyDown="userInput_KeyDown_1" FocusManager.FocusedElement="{Binding RelativeSource={RelativeSource Self}}"></TextBox>
-        <Button Margin="20 0 20 0" Height="40">Submit Message</Button>
+        <ListView Name="lvMessages">
+            <!--<ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="Height" Value="80" />
+                </Style>
+            </ListView.ItemContainerStyle>-->
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="User" Width="80" DisplayMemberBinding="{Binding Author}" />
+                    <!--<GridViewColumn Header="Message" Width="340" DisplayMemberBinding="{Binding Text}" />-->
+                    <GridViewColumn Header="Message" Width="340">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Text}" TextWrapping="Wrap" Foreground="Black" Background="LightGray" Padding="5, 2, 5, 2" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Date" Width="60" DisplayMemberBinding="{Binding DateAdded}" />
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <TextBox Name="userInput" Padding="10" Height="40" Margin="20 20 20 20" KeyDown="UserInputKeyDownEnter" FocusManager.FocusedElement="{Binding RelativeSource={RelativeSource Self}}"></TextBox>
+        <Button Margin="20 0 20 0" Height="40" Name="SubmitMsg" Click="SubmitMsg_Click">Submit Message</Button>
     </StackPanel>
 </Window>
