--- a/ASP.MVC/Application.Web/Views/Home/Index.cshtml
+++ b/ASP.MVC/Application.Web/Views/Home/Index.cshtml
@@ -1,31 +1,23 @@
-﻿@{
+﻿@model IEnumerable<Application.Web.Models.HomePageLaptopViewModel>
+@{
     ViewBag.Title = "Home Page";
 }
+<h1>Laptop System</h1>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
+<div class="row-fluid">
+@for (int i = 0; i < Model.Count(); i++)
+{
+    var laptop = Model.ElementAt(i);
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <h2>@laptop.Manufacturer @laptop.Model</h2>
+        <img src="@laptop.ImageUrl" alt="Alternate Text" />
+        <br />
+        <a class="btn btn-default" href="@Url.Action("Details", "Laptops", new { laptop.Id})">Price: @laptop.Price</a>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    if (i > 0 && (i + 1) % 3 == 0)
+    {
+        @:</div>
+        @:<div class="row-fluid">
+    }
+}
 </div>
