update mvc laptops

--- a/ASP.MVC/Application.Web/Views/Home/Index.cshtml
+++ b/ASP.MVC/Application.Web/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
-﻿@model IEnumerable<Application.Web.Models.HomePageLaptopViewModel>
+﻿@model IEnumerable<Application.Web.Models.LaptopViewModel>
 @{
     ViewBag.Title = "Home Page";
 }
-<h1>Laptop System</h1>
 
 <div class="row-fluid">
 @for (int i = 0; i < Model.Count(); i++)
