--- a/ASP.MVC/Application.Web/Views/Shared/Error.cshtml
+++ b/ASP.MVC/Application.Web/Views/Shared/Error.cshtml
@@ -6,4 +6,5 @@
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
+<p>@Model.Exception.Message</p>
 
