--- a/ASP.MVC/Application.Web/Views/Shared/_Layout.cshtml
+++ b/ASP.MVC/Application.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css", "~/Content/kendo")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
 
 </head>
 <body>
@@ -22,14 +23,22 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav" id="MainMenu">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Laptops", "List", "Laptops")</li>
+                        <li>@Html.ActionLink("Kendo Laptops", "KendoList", "Laptops")</li>
+                    }
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li>@Html.ActionLink("Manufacturers Administration", "Index", "ManufacturersAdministration")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
     <div class="container body-content">
+        <h1>Laptop System</h1>
         @RenderBody()
         <hr />
         <footer>
@@ -37,7 +46,7 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+    
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/kendo")
     @RenderSection("scripts", required: false)
