--- a/ASP.MVC/Application.Web/Views/Laptops/KendoList.cshtml
+++ b/ASP.MVC/Application.Web/Views/Laptops/KendoList.cshtml
@@ -1,60 +1,95 @@
 ﻿@{
     ViewBag.Title = "KendoList";
 }
-
 <h2>KendoList</h2>
 
 <div class="row">
-    <div>
-        Search by model name:
-    </div>
-    @(Html
-    .Kendo()
-    .AutoComplete()
-    .Name("modelsearch")
-    .DataTextField("Model")
-    .MinLength(3)
-    .Placeholder("Enter model")
-    .DataSource(data =>
+    @using (Html.BeginForm("Search", "Laptops", FormMethod.Post))
     {
-        data.Read(read =>
-            {
-                read.Action("GetLaptopModelData", "Laptops")
-                    .Data("onAdditionalData");
-            })
-            .ServerFiltering(true);
-    })
-    ))
+        <div>
+            Search by name:
+
+        </div>
+        @(Html.Kendo()
+        .AutoComplete()
+        .Name("modelSearch")
+        .DataTextField("Model")
+        .MinLength(3)
+        .Placeholder("Enter model")
+        .DataSource(data =>
+        {
+            data.Read(read =>
+                {
+                    read.Action("GetLaptopModelData", "Laptops")
+                        .Data("onAdditionalData");
+                })
+                .ServerFiltering(true);
+        }))
+        <br />
+        @(Html.Kendo()
+        .DropDownList()
+        .Name("manufsearch")
+        .DataTextField("ManufacturerName")
+        .DataValueField("ManufacturerName") // Search Criteria - can be ID
+        .OptionLabel("All")
+        .DataSource(data =>
+        {
+            data.Read(read => read.Action("GetLaptopManufacturerData", "Laptops"));
+            data.ServerFiltering(true);
+        }))
+        <br />
+        <div>
+            Search by Price:
+        </div>
+        @(Html.Kendo()
+    .NumericTextBox()
+    .Name("pricesearch")
+    .Min(600)
+    .Max(3000))
+        
+    <div></div>
+    <input class="btn" type="submit" value="Search"/>
+    }
 </div>
 
-@(Html.Kendo()
+@(Html
+.Kendo()
 .ListView<Application.Web.Models.LaptopViewModel>()
 .Name("laptops")
 .TagName("div")
 .ClientTemplateId("laptop-template")
 .Pageable()
-.DataSource(data => 
+.DataSource(data =>
 {
     data.Read("GetLaptops", "Laptops");
     data.ServerOperation(true);
     data.PageSize(5);
+    data.Sort(sort =>
+        {
+            sort.Add(laptop => laptop.Price).Descending();
+            sort.Add(laptop => laptop.Manufacturer);
+        });
 }))
+
 <script id="laptop-template" type="text/x-kendo-template">
     <div class="row">
-        <div class="col-md-2">
-            <img src="#= ImageUrl #" alt="Alternate Text" />
+        <div class="col-md-4">
+            <img src="#: ImageUrl #" alt="Alternate Text" />
         </div>
-        <div class="col-md-2">
-            <p class="pull-left">#= Manufacturer # #= Model #</p>
+        <div class="col-md-4">
+            <h3>#: Manufacturer # #: Model#</h3>
         </div>
-        <div class="col-md-2">
-            <a href="Details/#: Id #" class="btn btn-primary">Price #= Price #</a>
+        <div class="col-md-4">
+            <a href="/Laptops/Details/#: Id #" class="btn btn-default">Price: #: Price #</a>
         </div>
     </div>
 </script>
+
 <script>
     function onAdditionalData()
     {
-        return {}
+        return {
+            text: $("#modelSearch").val()
+        };
     }
 </script>
